--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
   <html lang="en" class="notranslate" translate="no">
   <head>
     <meta charset="utf-8">
-    <title>OnboardingCmo</title>
+    <title>Onboarding</title>
     <meta charset="utf-8">
     <meta name="google" content="notranslate" />
-    <title>Onboarding Cmo</title>
+    <title>Onboarding</title>
     <base href="/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
